// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequirementViewTest render snapshot matches with manual false and scanning is finished 1`] = `
"<div className=\\"requirementView\\">
  <div className=\\"requirementTitleContainer\\">
    <h1 className=\\"requirementViewTitle\\">
      Test Step Test Name
      <GuidanceTags deps={[undefined]} links={{...}} />
      <ContentPanelButton deps={[undefined]} reference={[undefined]} iconName=\\"info\\" contentTitle=\\"Test Step Test Name\\" />
    </h1>
  </div>
  <p>
    description
  </p>
  <CollapsibleComponent header={{...}} content={{...}} contentClassName=\\"requirementInstructions\\" />
  <div role=\\"alert\\" aria-live=\\"polite\\" aria-label=\\"Scan Complete\\" />
  <h2 className=\\"test-step-instances-header\\">
    Instances
  </h2>
  <AssessmentInstanceTable instancesMap={{...}} assessmentInstanceTableHandler={{...}} assessmentNavState={{...}} renderInstanceTableHeader={[undefined]} getDefaultMessage={[undefined]} assessmentDefaultMessageGenerator={[undefined]} hasVisualHelper={true} />
</div>"
`;

exports[`RequirementViewTest render, variable part for assisted test 1`] = `
"<div className=\\"requirementView\\">
  <div className=\\"requirementTitleContainer\\">
    <h1 className=\\"requirementViewTitle\\">
      Test Step Test Name
      <GuidanceTags deps={[undefined]} links={{...}} />
      <ContentPanelButton deps={[undefined]} reference={[undefined]} iconName=\\"info\\" contentTitle=\\"Test Step Test Name\\" />
    </h1>
  </div>
  <p>
    description
  </p>
  <CollapsibleComponent header={{...}} content={{...}} contentClassName=\\"requirementInstructions\\" />
  <h2 className=\\"test-step-instances-header\\">
    Instances
  </h2>
  <AssessmentInstanceTable instancesMap={{...}} assessmentInstanceTableHandler={{...}} assessmentNavState={{...}} renderInstanceTableHeader={[undefined]} getDefaultMessage={[undefined]} assessmentDefaultMessageGenerator={[undefined]} hasVisualHelper={true} />
</div>"
`;
